# FreeRDP

./: CMakeCPack.cmake  CMakeLists.txt
channels/: CMakeLists.txt
channels/client/: CMakeLists.txt
channels/drdynvc/client/: drdynvc_main.c
channels/rdpgfx/: ChannelOptions.cmake
channels/rdpgfx/server/: CMakeLists.txt  rdpgfx.c
channels/rdpsnd/client/winmm/: CMakeLists.txt
channels/rdpsnd/server/: CMakeLists.txt
channels/server/: CMakeLists.txt  channels.c
channels/smartcard/client/: smartcard_pack.c
client/Android/FreeRDPCore/jni/: android_freerdp.c
client/Android/FreeRDPCore/src/com/freerdp/freerdpcore/services/: LibFreeRDP.java
client/Sample/: CMakeLists.txt
client/Wayland/: wlfreerdp.c
client/Windows/: CMakeLists.txt  wf_client.c
client/Windows/cli/: CMakeLists.txt
client/X11/: xf_client.c
client/common/: CMakeLists.txt  cmdline.c
client/iOS/FreeRDP/: ios_freerdp_ui.m
cmake/: ConfigOptions.cmake  FindOpenH264.cmake  FindOpenSSL.cmake
include/freerdp/: error.h  freerdp.h  settings.h
include/freerdp/channels/: channels.h
include/freerdp/codec/: color.h  rfx.h
include/freerdp/server/: rdpgfx.h
libfreerdp/: CMakeLists.txt
libfreerdp/codec/: CMakeLists.txt  clear.c  color.c  progressive.c  rfx.c  rfx_decode.c  rfx_encode.c  rfx_rlgr.c  rfx_rlgr_asm_x64.nasm  rfx_rlgr_asm_x86.nasm  rfx_rlgr_masm_x64.asm  rfx_rlgr_masm_x86.asm  rfx_rlgr_microsoft_decrlgr3_x64.nasm  rfx_rlgr_microsoft_decrlgr3_x86.nasm  rfx_rlgr_microsoft_encrlgr3_x64.nasm  rfx_rlgr_microsoft_encrlgr3_x86.nasm  rfx_rlgr_options.h
libfreerdp/core/: client.c  freerdp.c  nla.c  peer.c  rdp.c  rdp.h  server.c  server.h  settings.c  tcp.c  transport.c
libfreerdp/core/gateway/: rdg.c
libfreerdp/core/test/: CMakeLists.txt
libfreerdp/crypto/: certificate.c  crypto.c  tls.c
libfreerdp/primitives/: prim_YUV.c
perftest/: .gitignore  CMakeLists.txt  perftest.c
server/: CMakeLists.txt
server/Sample/: CMakeLists.txt
server/Windows/: CMakeLists.txt  wf_info.c  wf_interface.c  wf_peer.c
server/Windows/cli/: CMakeLists.txt
server/common/: CMakeLists.txt
server/shadow/: CMakeLists.txt
server/shadow/Win/: win_rdp.c
server/shadow/X11/: x11_shadow.c
winpr/include/winpr/: cmdline.h  collections.h  file.h  string.h  tchar.h  wtsapi.h
winpr/libwinpr/: CMakeLists.txt
winpr/libwinpr/file/: file.c  file.h
winpr/libwinpr/interlocked/: module.def
winpr/libwinpr/path/: shell.c
winpr/libwinpr/sspicli/: sspicli.c
winpr/libwinpr/synch/: event.c  timer.c  wait.c
winpr/libwinpr/utils/: cmdline.c
winpr/libwinpr/wtsapi/: wtsapi_win32.c
winpr/tools/hash/: CMakeLists.txt
winpr/tools/makecert/: CMakeLists.txt
winpr/tools/makecert/cli/: CMakeLists.txt
